Refactored the domain types (struct) used in root package, and add implementation for in memory repository (Create)
